--- a/style.css
+++ b/style.css
@@ -1,154 +1,113 @@
-/* body, html{
-    height: 100%;
-    background-repeat: no-repeat;
-    background-color: #d3d3d3;
-    font-family: 'Raleway', Verdana;
-}
-
-.main{
-    margin-top: 70px;
-}
-.form-group{
-   margin-bottom: 15px;
-}
-
-
-
-input,
-input::-webkit-input-placeholder {
-   font-size: 11px;
-   padding-top: 3px;
-}
-
-.main-login{
-    background-color: #1C728A;
-  
-   -moz-border-radius: 5px;
-   -webkit-border-radius: 5px;
-   border-radius: 5px;
-   -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-
-}
-
-label{
-   margin-bottom: 15px;
-   font-size:18px;
-   color: #fff;
-}
-.main-center{
-    margin-top: 30px;
-    margin: 0 auto;
-    max-width: 330px;
-   padding: 40px 40px;
-
-}
-
-.login-button{
-   margin-top: 5px;
-}
-
-.iconbk{
-   background-color:#5BC0DE;
-}
-.formcontrolcls { 
-   padding: 9px; 
-   border: solid 1px #4B718B; 
-   outline: 0; 
-   background: -webkit-gradient(linear, left top, left 25, from(#FFFFFF), color-stop(4%, #9DDAEC), to(#FFFFFF)); 
-   background: -moz-linear-gradient(top, #FFFFFF, #9DDAEC 1px, #FFFFFF 25px); 
-   box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
-   -moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
-   -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
-
-   }  */
-
 
 
    body {
     font-family: Arial, sans-serif;
     height: 100%;
-  }
-  
-  header {
+    margin-top: -20px;
+}
+
+header {
     text-align: center;
-  
-    padding: 20px;
-  
-    background-color: #333;
-  
-    color: #fff;
-  }
-  
-  main {
-    margin: 20px;
-  }
-  
-  form {
-    display: flex;
-  
-    flex-direction: column;
-  
-    max-width: 500px;
-  
-    margin: 0 auto;
-  }
-  
-  label {
+    padding: 25px;
     margin-top: 10px;
-  }
-  
-  input[type="text"],
-  input[type="number"],
-  input[type="date"] {
+   
+    background-color: #333;
+    color: #fff;
+}
+
+
+
+input[type="text"],
+input[type="number"],
+input[type="date"] {
     padding: 8px;
-  
     margin-top: 5px;
-  
     border-radius: 3px;
-  
     border: 1px solid #ccc;
-  }
-  
-  table {
+}
+
+table {
     width: 100%;
-  
     border-collapse: collapse;
-  }
-  
-  table th,
-  table td {
+}
+
+table th,
+table td {
     padding: 8px;
-  
     text-align: left;
-  
     border-bottom: 1px solid #ccc;
-  }
-  
-  button {
+}
+button {
     margin-top: 10px;
-  
     padding: 8px 16px;
-  
     background-color: #333;
-  
     color: #fff;
-  
     border: none;
-  
     border-radius: 3px;
-  
     cursor: pointer;
+}
+
+#customer-name{
+  width: 236px;
+ }
+ 
+  #phone-number{
+    width: 260px;
   }
-  
-  footer {
-    height: 100%;
-    display: block;
-    unicode-bidi: isolate;
-     padding: 10px;
-    text-align: center;
-    background-color: #333;
-    color: #fff;
+  #phone{
+    margin-left: 350px;
+   margin-top: -180px;
   }
+  #email{
+    width: 260px;
+  }
+  #mail{
+    margin-left: 720px;
+    margin-top: -88px;
+  }
+
+  #purchase-date{
+  width: 230px;
   
+ }
+ #Purchase{
+  margin-left: 720px;
+  margin-top:-4px;
+ }
+ #address{
+  width: 260px;
+  /* height: 50px; */
+ }
+#gen{
+  width: 260px;
+  margin-left: 350px;
+  margin-top: -90px;
+}
+#deteils{
+  /* background-image: url(wallpaper2you_512871.jpg);
+  color: white; */
+  height: 250px;
+  border: 1px solid;
+  margin-top: 20px;
+}
+#show{
+  margin-top: 80px;
+  border: 1px solid;
+}
+.total{
+  margin-left: 59%;
+  margin-top:-40px;;
+}
+#add{
+  margin-left: 900px;
+  margin-top: -350px;
+ position: absolute;
+  
+}
+#bill{
+  margin-left: 600px;
+}
+  
+
+
+
